--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "devStart": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "sequelize": "^6.21.0",
     "sequelize-cli": "^6.4.1"
