--- a/config/config.json
+++ b/config/config.json
@@ -14,9 +14,9 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "b98dfa9ae49c04",
-    "password": "21752b6e",
-    "database": "heroku_9c71c3d0ba87403",
+    "username": "b72622d47aa4d0",
+    "password": "efa54239",
+    "database": "heroku_6d49c4a72428549",
     "host": "us-cdbr-east-05.cleardb.net",
     "dialect": "mysql"
   }
